package com.groupjn.userservice.service;

import com.groupjn.userservice.entity.User;

public interface IUser {

    public User save(User user);
}
