@startuml

title __USER-SERVICE's Class Diagram__\n

  namespace com.groupjn.serviceservice {
    class com.groupjn.serviceservice.ServletInitializer {
    }
  }
  

  namespace com.groupjn.serviceservice {
    class com.groupjn.serviceservice.UserServiceApplication {
    }
  }
  

  namespace com.groupjn.serviceservice {
    namespace controller {
      class UserController {
      }
    }
  }
  

  namespace com.groupjn.serviceservice {
    namespace entity {
      class Permission {
      }
    }
  }
  

  namespace com.groupjn.serviceservice {
    namespace entity {
      class Role {
      }
    }
  }
  

  namespace com.groupjn.serviceservice {
    namespace entity {
      class User {
      }
    }
  }
  

  namespace com.groupjn.serviceservice {
    namespace factory {
      class AdminUser {
      }
    }
  }
  

  namespace com.groupjn.serviceservice {
    namespace factory {
      class ClientUser {
      }
    }
  }
  

  namespace com.groupjn.serviceservice {
    namespace factory {
      class CreateUserFactory {
      }
    }
  }
  

  namespace com.groupjn.serviceservice {
    namespace factory {
      interface ICreateUserFactory {
      }
    }
  }
  

  namespace com.groupjn.serviceservice {
    namespace factory {
      enum UserType {
      }
    }
  }
  

  namespace com.groupjn.serviceservice {
    namespace repository {
      interface RoleRepository {
      }
    }
  }
  

  namespace com.groupjn.serviceservice {
    namespace repository {
      interface UserRepository {
      }
    }
  }
  

  namespace com.groupjn.serviceservice {
    namespace service {
      interface IRoleService {
      }
    }
  }
  

  namespace com.groupjn.serviceservice {
    namespace service {
      interface IUser {
      }
    }
  }
  

  namespace com.groupjn.serviceservice {
    namespace service {
      class RoleServiceImpl {
      }
    }
  }
  

  namespace com.groupjn.serviceservice {
    namespace service {
      class UserServiceImpl {
      }
    }
  }
  

  com.groupjn.serviceservice.ServletInitializer -up-|> org.springframework.boot.web.servlet.support.SpringBootServletInitializer
  UserController o-- UserRepository : repository
  UserController o-- RoleServiceImpl : roleService
  Permission .up.|> java.io.Serializable
  Role .up.|> java.io.Serializable
  User o-- UserType : userType
  AdminUser .up.|> ICreateUserFactory
  ClientUser .up.|> ICreateUserFactory
  ClientUser o-- RoleRepository : roleRepository
  ClientUser o-- UserRepository : userRepository
  CreateUserFactory o-- UserRepository : repository
  CreateUserFactory o-- RoleServiceImpl : roleService
  CreateUserFactory o-- User : user
  RoleServiceImpl .up.|> IRoleService
  RoleServiceImpl o-- RoleRepository : repository
  UserServiceImpl .up.|> IUser
  UserServiceImpl o-- UserRepository : repository


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
